tests/neg-custom-args/captures/implied-capability.check
-- Error: tests/neg-custom-args/captures/implied-capability.scala:4:6 --------------------------------------------------
4 |  var x: Int = 0 // error
  |      ^
  |      Mutable variable x is defined in a class that does not extend `Stateful` or `Mutable`.
  |      The variable needs to be annotated with `untrackedCaptures` to allow this.
-- Error: tests/neg-custom-args/captures/implied-capability.scala:8:6 --------------------------------------------------
8 |class C2 extends SharedCapability: // error
  |      ^
  |      class C2 is classied as scala.caps.SharedCapability but has a field r
  |      classified as scala.caps.Unscoped.
  |      Field classifiers have to conform to the classifier of the containing class.
